# rust-lsp-plugin

./: AGENTS.md  Cargo.toml  README.md  skills-lock.json
.agents/plugins/: marketplace.json
.agents/skills/ask-deepwiki/: SKILL.md
.agents/skills/github-commit/: SKILL.md
docs/integration/: lsp-server.md  lsp-types.md  rmcp.md  rust-analyzer.md
plugins/rust-lsp/: .mcp.json
skills/github-harness/: pyproject.toml
skills/github-harness/references/: IMPLEMENTATION_WORKFLOWS.md  add_comment.md  list_epics.md  read_pr_reviews.md  update_dependencies.md  validate_live_workflow.md
skills/github-harness/references/examples/: issue_lifecycle.md  prd_to_epics.md  review_intake.md
skills/github-harness/scripts/: create_implementation_issue.py  create_project.py  list_epics.py  list_open_issues.py  search_issues.py  update_dependencies.py  validate_graph.py
skills/github-harness/src/github_harness/: __init__.py  authoring.py  errors.py  github.py  process.py
skills/github-harness/tests/: test_issue_queries.py  test_validation_workflow.py
skills/rust-lsp-mcp/: SKILL.md
src/: lib.rs  lsp.rs  main.rs  rust_analyzer.rs  session.rs  workspace.rs
src/lsp_client/: mod.rs  rust_analyzer.rs  session.rs  workspace.rs
src/mcp_server/: error.rs  mod.rs  schema.rs
src/server/: error.rs  mod.rs  schema.rs
tests/: client_end_to_end.rs  core_lsp_requests.rs  mcp_server_runtime.rs  rust_analyzer_extensions.rs  server_end_to_end.rs  server_read_only_tools.rs  server_registry.rs  server_schema.rs  session_runtime.rs  workspace_session.rs  workspace_sync.rs
(+36 files in other folders)
