[package]
name = "rust-lsp-mcp"
edition = "2024"

[dependencies]
lsp-server = "0.7.9"
lsp-types = "0.97.0"
rmcp = { version = "0.7", features = ["macros", "server", "transport-io"] }
rmcp-macros = "0.7"
schemars = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
