[package]
name = "rust-lsp-plugin"
edition = "2024"

[[bin]]
name = "rust-lsp-plugin"
path = "src/bin/main.rs"

[[bin]]
name = "mock_rust_analyzer"
path = "src/bin/mock_rust_analyzer.rs"
required-features = ["e2e-test"]

[features]
e2e-test = []

[dependencies]
lsp-server = "0.7.9"
lsp-types = "0.97.0"
rmcp = { version = "0.7", features = ["macros", "server", "transport-io"] }
rmcp-macros = "0.7"
schemars = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
rust-lsp-plugin = { path = ".", features = ["e2e-test"] }
